Remove mc:edit from social icons in footer

--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1882,23 +1882,23 @@
 																													<table width="122" border="0" cellspacing="0" cellpadding="0" align="center">
 																														<tr>
 																															<td width="19">
-																																<a href="https://twitter.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/450f441b-9363-4121-9605-405da5bd8947.png" width="19" height="16" alt="Twitter" style="display:block;max-width:19px;max-height:16px;" border="0" mc:edit="footer_extended-twitter"></a>
+																																<a href="https://twitter.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/450f441b-9363-4121-9605-405da5bd8947.png" width="19" height="16" alt="Twitter" style="display:block;max-width:19px;max-height:16px;" border="0"></a>
 																															</td>
 																															<td width="10"> </td>
 																															<td width="9">
-																																<a href="https://www.facebook.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6858d573-0198-476c-8665-cde44cc3e5c3.png" width="9" height="16" alt="Facebook" style="display:block;max-width:9px;max-height:16px;" border="0" mc:edit="footer_extended-facebook"></a>
+																																<a href="https://www.facebook.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6858d573-0198-476c-8665-cde44cc3e5c3.png" width="9" height="16" alt="Facebook" style="display:block;max-width:9px;max-height:16px;" border="0"></a>
 																															</td>
 																															<td width="10"> </td>
 																															<td width="15">
-																																<a href="https://www.instagram.com/charitywater/" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6c1d18b2-ad23-4b55-809a-590a89fb0149.png" width="15" height="16" alt="Instagram" style="display:block;max-width:16px;max-height:16px;" border="0" mc:edit="footer_extended-instagram"></a>
+																																<a href="https://www.instagram.com/charitywater/" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6c1d18b2-ad23-4b55-809a-590a89fb0149.png" width="15" height="16" alt="Instagram" style="display:block;max-width:16px;max-height:16px;" border="0"></a>
 																															</td>
 																															<td width="10"> </td>
 																															<td width="17">
-																																<a href="https://www.snapchat.com/add/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/04199cb6-4f6c-4473-986b-9afe0a430e8a.png" width="17" height="16" alt="Snapchat" style="display:block;max-width:17px;max-height:16px;" border="0" mc:edit="footer_extended-snapchat"></a>
+																																<a href="https://www.snapchat.com/add/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/04199cb6-4f6c-4473-986b-9afe0a430e8a.png" width="17" height="16" alt="Snapchat" style="display:block;max-width:17px;max-height:16px;" border="0"></a>
 																															</td>
 																															<td width="10"> </td>
 																															<td width="22">
-																																<a href="https://www.youtube.com/user/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/ff71cd22-6649-4078-9ebe-9234548a7c5a.png" width="22" height="16" alt="YouTube" style="display:block;max-width:22px;max-height:16px;" border="0" mc:edit="footer_extended-youtube"></a>
+																																<a href="https://www.youtube.com/user/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/ff71cd22-6649-4078-9ebe-9234548a7c5a.png" width="22" height="16" alt="YouTube" style="display:block;max-width:22px;max-height:16px;" border="0"></a>
 																															</td>
 																														</tr>
 																													</table>
@@ -1950,23 +1950,23 @@
 																				<table width="122" border="0" cellspacing="0" cellpadding="0" align="center">
 																					<tr>
 																						<td width="19">
-																							<a href="https://twitter.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/450f441b-9363-4121-9605-405da5bd8947.png" width="19" height="16" alt="Twitter" style="display:block;max-width:19px;max-height:16px;" border="0" mc:edit="footer_minimal-twitter"></a>
+																							<a href="https://twitter.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/450f441b-9363-4121-9605-405da5bd8947.png" width="19" height="16" alt="Twitter" style="display:block;max-width:19px;max-height:16px;" border="0"></a>
 																						</td>
 																						<td width="10"> </td>
 																						<td width="9">
-																							<a href="https://www.facebook.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6858d573-0198-476c-8665-cde44cc3e5c3.png" width="9" height="16" alt="Facebook" style="display:block;max-width:9px;max-height:16px;" border="0" mc:edit="footer_minimal-facebook"></a>
+																							<a href="https://www.facebook.com/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6858d573-0198-476c-8665-cde44cc3e5c3.png" width="9" height="16" alt="Facebook" style="display:block;max-width:9px;max-height:16px;" border="0"></a>
 																						</td>
 																						<td width="10"> </td>
 																						<td width="15">
-																							<a href="https://www.instagram.com/charitywater/" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6c1d18b2-ad23-4b55-809a-590a89fb0149.png" width="15" height="16" alt="Instagram" style="display:block;max-width:15px;max-height:16px;" border="0" mc:edit="footer_minimal-instagram"></a>
+																							<a href="https://www.instagram.com/charitywater/" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/6c1d18b2-ad23-4b55-809a-590a89fb0149.png" width="15" height="16" alt="Instagram" style="display:block;max-width:15px;max-height:16px;" border="0"></a>
 																						</td>
 																						<td width="10"> </td>
 																						<td width="17">
-																							<a href="https://www.snapchat.com/add/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/04199cb6-4f6c-4473-986b-9afe0a430e8a.png" width="17" height="16" alt="Snapchat" style="display:block;max-width:17px;max-height:16px;" border="0" mc:edit="footer_minimal-snapchat"></a>
+																							<a href="https://www.snapchat.com/add/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/04199cb6-4f6c-4473-986b-9afe0a430e8a.png" width="17" height="16" alt="Snapchat" style="display:block;max-width:17px;max-height:16px;" border="0"></a>
 																						</td>
 																						<td width="10"> </td>
 																						<td width="22">
-																							<a href="https://www.youtube.com/user/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/ff71cd22-6649-4078-9ebe-9234548a7c5a.png" width="22" height="16" alt="YouTube" style="display:block;max-width:22px;max-height:16px;" border="0" mc:edit="footer_minimal-youtube"></a>
+																							<a href="https://www.youtube.com/user/charitywater" target="_blank"><img src="https://gallery.mailchimp.com/3d6974fb8c7dad48d3bc146fa/images/ff71cd22-6649-4078-9ebe-9234548a7c5a.png" width="22" height="16" alt="YouTube" style="display:block;max-width:22px;max-height:16px;" border="0"></a>
 																						</td>
 																					</tr>
 																				</table>
