--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -968,7 +968,7 @@
 													<td>
 														<table width="100%" border="0" cellspacing="0" cellpadding="0">
 															<tr>
-																<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:14px;line-height:24px;color:#71716c;" mc:edit="body_single-column-text-primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu. Morbi eget nibh dignissim dolor placerat mollis. Donec sit amet mi enim. Cras feugiat tellus vel justo porttitor vulputate. Vivamus ut nunc eu lectus fringilla porta non luctus odio. Fusce nec leo tellus. Morbi egestas et dolor sed varius.
+																<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:14px;line-height:24px;color:#71716c;" mc:edit="body_single-column-text-primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu. Morbi eget nibh dignissim dolor placerat mollis. Donec sit amet mi enim. Cras feugiat tellus vel justo porttitor vulputate. Vivamus ut nunc eu lectus fringilla porta non luctus odio. Fusce nec leo tellus. Morbi egestas et dolor sed varius.
 
 																	Quisque eget sapien urna. Proin a lectus in justo porttitor lacinia et sit amet neque. Nulla ultricies purus sed turpis mollis dignissim. Vestibulum dictum at orci non molestie. Nam sollicitudin mattis risus, quis tempor lectus tempor ut. Nullam erat tortor, ornare eu tempus ornare, pulvinar viverra urna. Mauris vestibulum risus eu est faucibus, id tristique mauris varius. Morbi ullamcorper in nunc sed commodo. Fusce vitae velit tincidunt, cursus neque at, ultrices urna.
 																</td>
@@ -1000,7 +1000,7 @@
 													<td>
 														<table width="265" border="0" align="left" cellpadding="0" cellspacing="0" class="wrapper">
 															<tr>
-																<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-primary-text-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante.</td>
+																<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-primary-text-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante.</td>
 															</tr>
 														</table>
 														<table width="265" border="0" cellspacing="0" cellpadding="0" align="right" class="wrapper">
@@ -1008,7 +1008,7 @@
 																<td class="pad_top">
 																	<table width="265" border="0" align="center" cellpadding="0" cellspacing="0" class="wrapper">
 																		<tr>
-																			<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-primary-text-2">Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu.</td>
+																			<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-primary-text-2">Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu.</td>
 																		</tr>
 																	</table>
 																</td>
@@ -1041,7 +1041,7 @@
 														<table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-left:3px solid;border-color:#dfdfd7;">
 															<tr>
 																<td width="30"> </td>
-																<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_block-quote-primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum.</td>
+																<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_block-quote-primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum.</td>
 															</tr>
 														</table>
 													</td>
@@ -1092,13 +1092,13 @@
 																									<td height="28" class="fix_height"> </td>
 																								</tr>
 																								<tr>
-																									<td class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-1">Lorem ipsum text</td>
+																									<td align="left" class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-1">Lorem ipsum text</td>
 																								</tr>
 																								<tr>
 																									<td height="13" style="line-height:0px;font-size:0px;"> </td>
 																								</tr>
 																								<tr>
-																									<td class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-1">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
+																									<td align="left" class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-1">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
 																								</tr>
 																							</table>
 																						</td>
@@ -1123,13 +1123,13 @@
 																									<td height="28" class="fix_height"> </td>
 																								</tr>
 																								<tr>
-																									<td class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-2">Lorem ipsum text</td>
+																									<td align="left" class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-2">Lorem ipsum text</td>
 																								</tr>
 																								<tr>
 																									<td height="13" style="line-height:0px;font-size:0px;"> </td>
 																								</tr>
 																								<tr>
-																									<td class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-2">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
+																									<td align="left" class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-2">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
 																								</tr>
 																							</table>
 																						</td>
@@ -1157,13 +1157,13 @@
 																						<td height="28" class="fix_height"> </td>
 																					</tr>
 																					<tr>
-																						<td class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-3">Lorem ipsum text</td>
+																						<td align="left" class="cw-black" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:18px;line-height:20px;color:#333333;" mc:edit="body_three-up-with-images-title-3">Lorem ipsum text</td>
 																					</tr>
 																					<tr>
 																						<td height="13" style="line-height:0px;font-size:0px;"> </td>
 																					</tr>
 																					<tr>
-																						<td class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-3">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
+																						<td align="left" class="grey-60" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_three-up-with-images-text-3">Pellentesque vitae lorem ipsum dol amet, consectetur adipiscing elit.</td>
 																					</tr>
 																				</table>
 																			</td>
@@ -1589,7 +1589,7 @@
 													<td>
 														<table width="100%" border="0" cellspacing="0" cellpadding="0">
 															<tr>
-																<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:14px;line-height:24px;color:#71716c;" mc:edit="body_single-column-text-secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu. Morbi eget nibh dignissim dolor placerat mollis. Donec sit amet mi enim. Cras feugiat tellus vel justo porttitor vulputate. Vivamus ut nunc eu lectus fringilla porta non luctus odio. Fusce nec leo tellus. Morbi egestas et dolor sed varius.
+																<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:14px;line-height:24px;color:#71716c;" mc:edit="body_single-column-text-secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum. Duis tempus bibendum ante nec gravida. Nunc nec mi nec mi consectetur vulputate vel ut leo. Etiam ut posuere arcu. Morbi eget nibh dignissim dolor placerat mollis. Donec sit amet mi enim. Cras feugiat tellus vel justo porttitor vulputate. Vivamus ut nunc eu lectus fringilla porta non luctus odio. Fusce nec leo tellus. Morbi egestas et dolor sed varius.
 
 																	Quisque eget sapien urna. Proin a lectus in justo porttitor lacinia et sit amet neque. Nulla ultricies purus sed turpis mollis dignissim. Vestibulum dictum at orci non molestie. Nam sollicitudin mattis risus, quis tempor lectus tempor ut. Nullam erat tortor, ornare eu tempus ornare, pulvinar viverra urna. Mauris vestibulum risus eu est faucibus, id tristique mauris varius. Morbi ullamcorper in nunc sed commodo. Fusce vitae velit tincidunt, cursus neque at, ultrices urna.</td>
 																</tr>
@@ -1620,7 +1620,7 @@
 														<td>
 															<table width="265" border="0" align="left" cellpadding="0" cellspacing="0" class="wrapper">
 																<tr>
-																	<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-secondary-text-1"> 	
+																	<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-secondary-text-1"> 	
 																		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante.</td>
 																	</tr>
 																</table>
@@ -1629,7 +1629,7 @@
 																		<td class="pad_top">
 																			<table width="265" border="0" align="center" cellpadding="0" cellspacing="0" class="wrapper">
 																				<tr>
-																					<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-secondary-text-2"> 	
+																					<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_two-column-text-secondary-text-2"> 	
 																						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante.</td>
 																					</tr>
 																				</table>
@@ -1663,7 +1663,7 @@
 																	<table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-left:3px solid;border-color:#dfdfd7;">
 																		<tr>
 																			<td width="30"> </td>
-																			<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_block-quote-secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum.</td>
+																			<td align="left" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:13px;line-height:20px;color:#71716c;" mc:edit="body_block-quote-secondary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut mattis urna. Cras ut bibendum enim. Fusce sit amet blandit sapien. Praesent finibus urna mauris, a pharetra ante ornare a. Sed tempus molestie interdum.</td>
 																		</tr>
 																	</table>
 																</td>
