Align second colorblock component text to left

--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1690,7 +1690,7 @@
 														<div class="section-border-secondary">
 															<table bgcolor="#ffffff" width="650" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper" mc:repeatable mc:variant="Border" style="table-layout:fixed;">
 																<tr>
-																	<td class="full_img_border" align="center" valign="top"><img src="http://placehold.it/650x20" width="650" height="20" style="display:block;border:none;max-width:650px;max-height:20px;" mc:edit="body_colorblock-section-secondary-border-top">
+																	<td class="full_img_border" align="left" valign="top"><img src="http://placehold.it/650x20" width="650" height="20" style="display:block;border:none;max-width:650px;max-height:20px;" mc:edit="body_colorblock-section-secondary-border-top">
 																	</td>
 																</tr>
 															</table>
