Fix text alignment

--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1705,7 +1705,7 @@
 																			<td height="30" class="fix_height"> </td>
 																		</tr>
 																		<tr>
-																			<td class="white" align="center" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;" mc:edit="section2_maintitle">Neque porro quisquam est qui dolorem ipsum</td>
+																			<td class="white" align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;" mc:edit="section2_maintitle">Neque porro quisquam est qui dolorem ipsum</td>
 																		</tr>
 																		<tr>
 																			<td height="30" class="fix_height"> </td>
