--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta content="telephone=no" name="format-detection">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="x-ua-compatible" content="IE=edge">
-<title>charity: water</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta content="telephone=no" name="format-detection">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="x-ua-compatible" content="IE=edge">
+	<title>charity: water</title>
 
-<style type="text/css">
+	<style type="text/css">
 
 	/*
 	@tab Puddle Settings
@@ -226,7 +226,7 @@
 	}
 
 	/*
-	@tab Primary Content
+	@tab Secondary Content
 	@section Colorblock Section
 	*/
 	.body_colorblock-section-secondary-bg{
