--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -109,7 +109,7 @@
 	@tab Primary Content
 	@section Colorblock Section Borders
 	*/
-	.section-border{
+	.section-border-primary{
 		/*@editable*/display:block !important;
 	}
 
