--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1743,9 +1743,9 @@
 										<!-- COLORBLOCK SECTION COMPONENT //-->
 
 										<!-- CTA COMPONENT  -->
-										<div id="body_single-column-text-secondary">
-											<span class="conditional cw-background-color" mc:edit="body_single-column-text-secondary-if">*|IF:CONDITIONAL|**|END:IF|*</span>
-											<table width="650" bgcolor="#ffffff" border="0" align="center" cellpadding="0" cellspacing="0" class="wrapper" style="table-layout:fixed;" mc:repeatable mc:variant="Large Image">
+										<div id="body_cta">
+											<span class="conditional cw-background-color" mc:edit="body_cta-if">*|IF:CONDITIONAL|**|END:IF|*</span>
+											<table width="650" bgcolor="#ffffff" border="0" align="center" cellpadding="0" cellspacing="0" class="wrapper" style="table-layout:fixed;" mc:repeatable mc:variant="CTA">
 												<tr>
 													<td height="30" style="line-height:0px;font-size:0px;"> </td>
 												</tr>
@@ -1770,7 +1770,7 @@
 														</td>
 													</tr>
 												</table>
-												<span class="conditional cw-background-color" mc:edit="body_single-column-text-secondary-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
+												<span class="conditional cw-background-color" mc:edit="body_cta-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
 											</div>
 											<!-- CTA COMPONENT //-->
 
@@ -2037,7 +2037,7 @@
 																				<td height="10"> </td>
 																			</tr>
 																			<tr>
-																				<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:12px;line-height:22px;color:#71716c;background-color:#eeeeee;" align="center" mc:edit="mailing2">
+																				<td style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:12px;line-height:22px;color:#71716c;background-color:#eeeeee;" align="center">
 																					<a href="*|UNSUB|*" target="_blank" style="color:#369ff4;text-decoration:underline;"><span class="cw-blue">Unsubscribe</span></a>
 																				</td>
 																			</tr>
