--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -251,6 +251,14 @@
 		/*@editable*/display:block !important;
 	}
 
+	/*
+	@tab Secondary Content
+	@section Call to Action
+	*/
+	#body_cta{
+		/*@editable*/display:block !important;
+	}
+
 	/*   
 	@tab Footer
 	@section Extended
@@ -1759,18 +1767,18 @@
 																		<tr>
 																			<td width="20" height="60"> </td>
 																			<td height="60" align="center" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:16px;line-height:18px;color:#ffffff;" mc:edit="body_cta-text">
-																				<a href="#" target="_blank" style="text-decoration:none;color:#ffffff;" class="button">CALL TO ACTION</a></td>
-																				<td width="20" height="60"> </td>
-																			</tr>
-																		</table>
-																	</td>
-																	<td width="45" class="hide"> </td>
-																</tr>
-															</table>
-														</td>
-													</tr>
-												</table>
-												<span class="conditional cw-background-color" mc:edit="body_cta-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
+																			<a href="#" target="_blank" style="text-decoration:none;color:#ffffff;" class="button">CALL TO ACTION</a></td>
+																			<td width="20" height="60"> </td>
+																		</tr>
+																	</table>
+																</td>
+																<td width="45" class="hide"> </td>
+															</tr>
+														</table>
+													</td>
+												</tr>
+											</table>
+											<span class="conditional cw-background-color" mc:edit="body_cta-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
 											</div>
 											<!-- CTA COMPONENT //-->
 
