Force button display in design editor

--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<meta content="telephone=no" name="format-detection">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="x-ua-compatible" content="IE=edge">
-	<title>charity: water</title>
 
-	<style type="text/css">
+<head>
+    <!--[if gte mso 15]>
+    <xml>
+    <o:OfficeDocumentSettings>
+    <o:AllowPNG/>
+    <o:PixelsPerInch>96</o:PixelsPerInch>
+    </o:OfficeDocumentSettings>
+    </xml>
+    <![endif]-->
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta content="telephone=no" name="format-detection">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <title>charity: water</title>
+
+    <style type="text/css">
 
 	/*
 	@tab Puddle Settings
@@ -1763,22 +1772,22 @@
 															<tr>
 																<td width="45" class="hide"> </td>
 																<td>
-																	<table class="button" style="border-radius:3px;background-color:#369ff4" border="0" cellspacing="0" cellpadding="0">
+																	<table class="button" height="60" style="border-radius:3px;background-color:#369ff4" border="0" cellspacing="0" cellpadding="0" style="table-layout:fixed";>
 																		<tr>
 																			<td width="20" height="60"> </td>
-																			<td height="60" align="center" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:16px;line-height:18px;color:#ffffff;" mc:edit="body_cta-text">
-																			<a href="#" target="_blank" style="text-decoration:none;color:#ffffff;" class="button">CALL TO ACTION</a></td>
-																			<td width="20" height="60"> </td>
-																		</tr>
-																	</table>
-																</td>
-																<td width="45" class="hide"> </td>
-															</tr>
-														</table>
-													</td>
-												</tr>
-											</table>
-											<span class="conditional cw-background-color" mc:edit="body_cta-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
+																			<td height="60" align="center" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:16px;line-height:18px;color:#ffffff;" mc:edit="body_cta-button">
+																				<a href="#" target="_blank" style="text-decoration:none;color:#ffffff;" class="button">CALL TO ACTION</a></td>
+																				<td width="20" height="60"> </td>
+																			</tr>
+																		</table>
+																	</td>
+																	<td width="45" class="hide"> </td>
+																</tr>
+															</table>
+														</td>
+													</tr>
+												</table>
+												<span class="conditional cw-background-color" mc:edit="body_cta-endif">*|IF:CONDITIONAL|**|END:IF|*</span>
 											</div>
 											<!-- CTA COMPONENT //-->
 
