Increase line-height

--- a/Puddle-for-MailChimp.html
+++ b/Puddle-for-MailChimp.html
@@ -1149,7 +1149,7 @@
 													<td height="50" style="line-height:1px;font-size:1px;"> </td>
 												</tr>
 												<tr>
-													<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:24px;line-height:27px;color:#369ff4;" mc:edit="body_title-section-text">Your $*|AMOUNT|* donation will help bring clean and safe water to communities in need.</td>
+													<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:24px;line-height:30px;color:#369ff4;" mc:edit="body_title-section-text">Your $*|AMOUNT|* donation will help bring clean and safe water to communities in need.</td>
 												</tr>
 												<tr>
 													<td height="20" style="line-height:1px;font-size:1px;" class="fix_height"> </td>
@@ -1191,7 +1191,7 @@
 																<td height="30" class="fix_height"> </td>
 															</tr>
 															<tr>
-																<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;text-align:left;" mc:edit="body_colorblock-section-primary-text">Neque porro quisquam est qui dolorem ipsum</td>
+																<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;text-align:left;font-size:14px;line-height:24px;" mc:edit="body_colorblock-section-primary-text">Neque porro quisquam est qui dolorem ipsum</td>
 															</tr>
 															<tr>
 																<td height="30" class="fix_height"> </td>
@@ -1970,7 +1970,7 @@
 																			<td height="30" class="fix_height"> </td>
 																		</tr>
 																		<tr>
-																			<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;text-align:left;" mc:edit="section2_maintitle">Neque porro quisquam est qui dolorem ipsum</td>
+																			<td align="left" valign="top" style="font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;color:#ffffff;text-align:left;font-size:14px;line-height:24px;" mc:edit="body_colorblock-section-secondary-text">Neque porro quisquam est qui dolorem ipsum</td>
 																		</tr>
 																		<tr>
 																			<td height="30" class="fix_height"> </td>
